// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Button component should render correctly when is disabled 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #777777;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        disabled=""
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the backgroundStyle is float 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #333333;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: #ffffff;
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14);
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the backgroundStyle is float and is disabled 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #777777;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: #bbbbbb;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        disabled=""
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the backgroundStyle is overlay 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #333333;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: #000000;
    opacity: 0.56;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the backgroundStyle is overlay and is disabled 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #bbbbbb;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: default;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: #000000;
    opacity: 0.56;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        disabled=""
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the color is primary 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #f4ab34;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the color is surface 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #ffffff;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the size is medium 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #333333;
  font-size: 40px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 48px;
    width: 48px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 48px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly when the size is semiX 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #333333;
  font-size: 32px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 40px;
    width: 40px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 40px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Icon Button component should render correctly with default props 1`] = `
Array [
  ".icon-0-2-15 {
  font-family: natds-icons;
  user-select: none;
}
.icon-d0-0-2-16 {
  color: #333333;
  font-size: 24px;
}
.sharedRippleEffect-0-2-5 {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6 {
  outline: none;
  position: relative;
  align-self: start;
}
.wrapper-0-2-6:focus:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  opacity: 0.16;
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.wrapper-0-2-6:hover:after {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: \\" \\";
  z-index: -1;
  position: absolute;
  border-radius: 50%;
}
.ripple-0-2-7 {
  opacity: 0;
  position: absolute;
  transform: translate(-50%, -50%);
  border-radius: 50%;
}
.rippleContainer-0-2-8 {
  inset: 0;
  position: absolute;
}
.rippleActive-0-2-9 {
  z-index: 99;
}
@keyframes keyframes-ripple-0-2-10 {
  0% {
    transform: translate(-50%, -50%) scale(0);
  }
  75% {
    opacity: 0.12;
    transform: translate(-50%, -50%) scale(1);
  }
  100% {
    opacity: 0;
    z-index: 0;
  }
}
  .wrapper-d0-0-2-11 {
    cursor: pointer;
    display: inline-block;
  }
  .wrapper-d0-0-2-11:focus:after {
    background-color: #000000;
  }
  .wrapper-d0-0-2-11:hover:after {
    background-color: #000000;
    opacity: 0;
  }
  .ripple-d1-0-2-12 {
    background-color: #000000;
    height: 0;
    left: 50%;
    top: 50%;
    transition: scale opacity 300ms;
    width: 0;
  }
  .rippleContainer-d2-0-2-13 {
    overflow: hidden;
  }
  .rippleActive-d3-0-2-14 {
    animation: keyframes-ripple-0-2-10 300ms;
  }
  .base-0-2-3 {
    border: none;
    cursor: pointer;
    display: flex;
    outline: none;
    align-items: center;
    justify-content: center;
  }
  .base-0-2-3:disabled {
    cursor: default;
  }
  .base-d0-0-2-4 {
    height: 32px;
    width: 32px;
  }
  .iconButtonContainer-0-2-1 {
    overflow: hidden;
    position: relative;
    border-radius: 50%;
  }
  .iconButtonContainer-0-2-1:after {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: \\" \\";
    opacity: 0;
    position: absolute;
    background-color: #000000;
  }
  .iconButtonContainer-0-2-1:hover:not([disabled]):after {
    opacity: 0.04;
  }
  .iconButtonContainer-0-2-1:focus:not([disabled]):after {
    opacity: 0.12;
  }
  .iconButtonContainer-0-2-1:disabled {
    cursor: default;
  }
  .iconButtonContainer-d0-0-2-2 {
    background-color: transparent;
    width: 32px;
  }",
  <div>
    <div
      class="wrapper-0-2-6 wrapper-d0-0-2-11"
      data-testid="ripple-wrapper"
      tabindex="-1"
    >
      <div
        class="rippleContainer-0-2-8 rippleContainer-d2-0-2-13"
      >
        <div
          class="ripple-0-2-7 ripple-d1-0-2-12 "
          data-testid="ripple-animation"
        />
      </div>
      <button
        class="base-0-2-3 base-d0-0-2-4 iconButtonContainer-0-2-1 iconButtonContainer-d0-0-2-2"
        type="button"
      >
        <i
          aria-hidden="false"
          arial-label=""
          class="icon-0-2-15 icon-d0-0-2-16 natds-icons natds-icons-outlined-default-mockup"
          data-testid="icon-outlined-default-mockup"
          role="button"
        />
      </button>
    </div>
  </div>,
]
`;
